fixed bug with leftbar not showing on tablet and mobile view

--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -137,7 +137,7 @@
                   font-size: 13px;
                   letter-spacing: 1px;
                 }
-                .active {
+                .aside.active {
                   color: var(--color-dark);
                 }
               }
