--- a/src/components/Sidebar/Left/leftbar.scss
+++ b/src/components/Sidebar/Left/leftbar.scss
@@ -81,7 +81,7 @@
       p {
         font-size: 12px;
         display: block;
-        color: #737371;
+        color: var(--color-gray);
       }
 
       .dark-mode-switch {
@@ -189,11 +189,10 @@
                 position: relative;
                 width: 100% !important;
                 height: 0.25rem;
-                // background: rgb(22, 22, 29);
                 background: #d9dfab;
                 border-radius: 0;
                 span {
-                  background: #c5a269;
+                  background: var(--color-secondary);
                   position: absolute;
                   left: 0;
                   bottom: 0;
@@ -208,8 +207,7 @@
                 padding: 0;
                 margin: 0;
                 transform: translate((-50%, -50%));
-                // color: #8c8c8e;
-                color: #737371;
+                color: var(--color-gray);
                 width: 100%;
                 text-align: right;
               }
@@ -231,10 +229,10 @@
             font-weight: 700;
             content: "\f00c";
             font-size: 12px;
-            color: #c5a269;
+            color: var(--color-secondary);
             margin-right: 10px;
           }
-          @include tablet() {
+          @include trial() {
             font-size: 12px;
             &::before {
               font-size: 10px;
@@ -262,6 +260,10 @@
           margin-bottom: 10px;
           transition: 0.4s ease-in-out;
           -webkit-transition: 0.4s ease-in-out;
+
+          &:hover {
+            color: var(--color-black);
+          }
         }
       }
     }
